--- a/netlify.toml
+++ b/netlify.toml
@@ -2,12 +2,8 @@
   publish = "build"
   command = "npm run build"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
 [build.environment]
+  NODE_VERSION = "18"
   # These will be set in Netlify dashboard
   # REACT_APP_FIREBASE_API_KEY = ""
   # REACT_APP_FIREBASE_AUTH_DOMAIN = ""
@@ -15,3 +11,8 @@
   # REACT_APP_FIREBASE_STORAGE_BUCKET = ""
   # REACT_APP_FIREBASE_MESSAGING_SENDER_ID = ""
   # REACT_APP_FIREBASE_APP_ID = ""
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
