--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "blogtime",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "18.x",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
     "firebase": "^12.5.0",
     "react": "^18.2.0",
@@ -11,7 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
+    "build:ci": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
